[tool.poetry]
name = "whaley-price-action"
version = "0.1.0"
description = ""
authors = ["Agung Setiaji <mragungsetiaji@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
